src/test/deca/context/invalid/provided/testi01.deca
//Resultats :
//Erreur contextuelle
//Ligne 4 : non defined type
class A extends nada{}